Добавлена таблица admins и методы для работы с ней