@@ -17,6 +17,7 @@ import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import java.io.*;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
@@ -81,9 +82,9 @@ public class TelegramBot extends TelegramLongPollingBot {
                 row.add(new InlineKeyboardButton()
                         .setText("Рассказать в VK")
                         .setUrl(String.format(vkShareUrl,
-                                URLEncoder.encode(String.format("https://t.me/%s", botUsername), "UTF-8"),
-                                URLEncoder.encode(reply.shareText, "UTF-8"),
-                                URLEncoder.encode(reply.imageUrl, "UTF-8"))));
+                                URLEncoder.encode(String.format("https://t.me/%s", botUsername), StandardCharsets.UTF_8),
+                                URLEncoder.encode(reply.shareText, StandardCharsets.UTF_8),
+                                URLEncoder.encode(reply.imageUrl, StandardCharsets.UTF_8))));
                 inlineRows.add(row);
                 inlineMarkup.setKeyboard(inlineRows);
                 sendPhoto.setReplyMarkup(inlineMarkup);
@@ -91,7 +92,7 @@ public class TelegramBot extends TelegramLongPollingBot {
                 execute(sendPhoto);
             }
             execute(sendMessage);
-        } catch (TelegramApiException | UnsupportedEncodingException e) {
+        } catch (TelegramApiException e) {
             e.printStackTrace();
         }
     }
